Refactor: uso de metodo include & Ejercicio Melate Chocolate

--- a/js-04-arrays_and_loops/index.html
+++ b/js-04-arrays_and_loops/index.html
@@ -89,6 +89,19 @@
       <ul class="text-start" id="cantantes-lista">
       </ul>
     </section>
+    <!-- Melate Chocolate -->
+    <section class="row my-3 justify-content-center">
+      <!-- Botón -->
+      <div class="col-md-4">
+        <button id="btn-generar" type="button" class="btn btn-primary btn-lg w-100 shadow-sm">
+          🎲 Genera tus números
+        </button>
+      </div>
+      <!-- Números de la Suerte -->
+      <div class="col-md-4">
+        <p id="melate-chocolate" class="fs-4 fw-semibold text-success">1-2-3-4-5-6</p>
+      </div>
+    </section>    
   </main>
 
   <footer class="container text-center">   
