--- a/js-07-api_fetch/src/pages/contact/contact.html
+++ b/js-07-api_fetch/src/pages/contact/contact.html
@@ -19,7 +19,7 @@
     <header id="header"></header>
 
     <main class="container text-center mt-5">
-        <h1>Contact</h1>
+        <h1>Products</h1>
     </main>
 
     <footer id="footer"></footer>
